--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
 	</script>
 </head>
 <body onscroll="buscar()">
-	<div id='content'>
 		<header>
 			<img src="bannerAnimado/banner2.gif" alt="Banner animado de la pagina">
 		</header>
-		<content>
+		<div class='contenido'>
 			<br>
 			<div id='imagenes'>
 				<div>
@@ -40,7 +39,7 @@
 						Your browser doesn't support this video.
 				</video>
 			</div>
-		</content>
+		</div>
 		<audio controls autoplay loop class="audioFondo">
 			<source src="audio/CreativeCommonsSong.ogg" type="audio/ogg">
 			<source src="audio/CreativeCommonsSong.mp3" type="audio/mp3">
@@ -48,6 +47,5 @@
 				Your browser doesn't support this audio
 		</audio>
 		<p class="subir" onclick="subir()">Subir</p>
-	</div>
 </body>
 </html>
